--- a/angularflexapp/package.json
+++ b/angularflexapp/package.json
@@ -16,7 +16,7 @@
     "@angular/common": "~9.1.12",
     "@angular/compiler": "~9.1.12",
     "@angular/core": "~9.1.12",
-    "@angular/flex-layout": "^7.0.0-beta.24",
+    "@angular/flex-layout": "9.0.0-beta.30",
     "@angular/forms": "~9.1.12",
     "@angular/material": "7.3.7",
     "@angular/platform-browser": "~9.1.12",
